--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node_postgres",
   "version": "1.0.0",
-  "description": "Basic CRUD API - NodeJs & Postgres",
+  "description": "Basic CRUD API - Postgres",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,10 +10,13 @@
   "author": "Sanjay Kuchipudi",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.19.0",
     "cors": "2.8.4",
+    "crypto": "^1.0.1",
     "dotenv": "8.2.0",
     "express": "4.16.3",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "7.18.2",
     "sequelize": "5.21.5",
     "winston": "^3.2.1"
