added passport.js for authentication

--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
-DB_CONNECT_API = 'Database Connectivity & ORM API'
+APP = 'Collab Platform - Posts API'
 
 PG_USER = postgres
 PG_HOST = localhost
-PG_POSTS_DATABASE = posts_db
+PG_POSTS_DATABASE = acg_snp_posts
 PG_POSTS_PASSWORD = 
 PG_PORT = 5432
 
+JWT_SUB = snp_email@gmail.com
+JWT_AUD = localhost:5000
+
 EXPRESS_PORT = 5000
+CORS = false
+LOG_DIR = logs
