--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "pg": "7.18.2",
     "sequelize": "5.21.5",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "jest": "^25.3.0"
   }
 }
