updated .env with correct database name

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP = 'Collab Platform - Posts API'
 
 PG_USER = postgres
 PG_HOST = localhost
-PG_POSTS_DATABASE = acg_snp_posts
+PG_POSTS_DATABASE = posts_db
 PG_POSTS_PASSWORD = 
 PG_PORT = 5432
 
